--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 <body>
   <nav class="invis">
     <ul class="wipeUL">
-      <li><button class="styleButton">Home</button></li>
-      <li><button class="styleButton">Album 1</button></li>
-      <li><button class="styleButton">Album 2</button></li>
-      <li><button class="styleButton">Album 3</button></li>
-      <li><button class="styleButton">Album 4</button></li>
-      <li><button class="styleButton">Album 5</button></li>
-      <li><button class="styleButton">Album 6</button></li>
+      <li><button class="styleButton homeButton">Home</button></li>
+      <li><button class="styleButton albumButton" rel="Album 1">Album 1</button></li>
+      <li><button class="styleButton albumButton" rel="Album 2">Album 2</button></li>
+      <li><button class="styleButton albumButton" rel="Album 3">Album 3</button></li>
+      <li><button class="styleButton albumButton" rel="Album 4">Album 4</button></li>
+      <li><button class="styleButton albumButton" rel="Album 5">Album 5</button></li>
+      <li><button class="styleButton albumButton" rel="Album 6">Album 6</button></li>
     </ul>
   </nav>
   <header>
-    <button class="invis">Back to Album 1</button>
+    <button class="invis" rel="">Back to Album 1</button>
     <h1>My Albums</h1>
   </header>
   <div id="rightWrapper">
     <ul class="wipeUL">
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 1">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 1</div>
         </div>
       </li>
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 2">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 2</div>
         </div>
       </li>
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 3">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 3</div>
         </div>
@@ -46,19 +46,19 @@
     </ul>
     <ul class="wipeUL">
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 4">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 4</div>
         </div>
       </li>
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 5">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 5</div>
         </div>
       </li>
       <li>
-        <div class="imgOut">
+        <div class="imgOut" rel="Album 6">
           <div class="imgIn"></div>
           <div class="imgLabel">Album 6</div>
         </div>
